Fixed image distortion on smaller screens.
Changed alt tag to "portfolio-image" to match the css

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ footer {
     padding: 0;
 }
 
-.profile-image {
+.portfolio-image {
     object-fit: cover;
     max-width: 100%;
     margin-bottom: 20px;
